--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port ${PORT:-3000}",
-    "build": "vite build",
-    "lint": "eslint --cache -f json --quiet .",
-    "preview": "bun run build && vite preview --host 0.0.0.0 --port ${PORT:-4173}",
-    "deploy": "bun run build && wrangler deploy",
-    "cf-typegen": "wrangler types",
-    "prepare": "bun .bootstrap.js || true"
-  },
+  "dev": "vite --host 0.0.0.0 --port ${PORT:-3000}",
+  "build": "vite build && npm run build:worker",
+  "build:worker": "npx esbuild worker/*.ts --bundle=false --format=esm --platform=neutral --target=es2022 --outdir=dist/ztna_scout_xzqd7i_t0wnczmfjnhmin --outbase=worker",
+  "lint": "eslint --cache -f json --quiet .",
+  "preview": "npm run build && vite preview --host 0.0.0.0 --port ${PORT:-4173}",
+  "deploy": "npm run build && wrangler deploy",
+  "cf-typegen": "wrangler types"
+},
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "class-variance-authority": "^0.7.1",
+    "cloudflare": "^5.0.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
@@ -56,9 +57,11 @@
     "eslint-plugin-import": "^2.32.0",
     "framer-motion": "^12.23.0",
     "hono": "^4.9.8",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "immer": "^10.1.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "pino": "^9.11.0",
     "react": "^18.3.1",
@@ -66,21 +69,22 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-hotkeys-hook": "^5.1.0",
+    "react-i18next": "^16.5.0",
     "react-resizable-panels": "^3.0.3",
     "react-router-dom": "6.30.0",
     "react-select": "^5.10.2",
     "react-swipeable": "^7.0.2",
+    "react-turnstile": "^1.1.4",
     "react-use": "^17.6.0",
-    "recharts": "2.15.4",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.5",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.5",
-    "zustand": "^5.0.6",
-    "cloudflare": "^5.0.0"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.17.1",
