--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
+      - uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
-      - name: Install (bun.lock is source of truth)
-        run: bun install --frozen-lockfile
+      - run: bun install --frozen-lockfile
+      - run: bun run build
 
-      - name: Build
-        run: bun run build
-
-      - name: Deploy (Wrangler via npx, no bunx)
+      - name: Deploy (Wrangler v4)
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        run: npx --yes wrangler@3 deploy
+        run: npx --yes wrangler@4 deploy --config wrangler.jsonc
