--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,33 +1,22 @@
-/**
- * Wrangler config for the Cloudflare Durable Object template
- * STRICTLY DO NOT MODIFY THIS FILE - Hidden from AI to prevent breaking core functionality
- */
- {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "ztna-scout-xzqd7i_t0wnczmfjnhmin",
-	"main": "worker/index.ts",
-	"compatibility_date": "2025-04-24",
-	"assets": {
-		"not_found_handling": "single-page-application",
-		"run_worker_first": ["/api/*", "!/api/docs/*"]
-	},
-	"observability": {
-		"enabled": true
-	},
-    "durable_objects": {
-      "bindings": [
-        {
-          "name": "GlobalDurableObject",
-          "class_name": "GlobalDurableObject"
-        }
-      ]
-    },
-    "migrations": [
-      {
-        "tag": "v1",
-        "new_sqlite_classes": [
-          "GlobalDurableObject"
-        ]
-      }
-    ]
+{
+  "name": "ztna-scout",
+  "main": "worker/index.ts",
+  "compatibility_date": "2025-01-01",
+
+  "assets": {
+    "directory": "dist",
+    "run_worker_first": true
+  },
+
+  "vars": {
+    "PUBLIC_BASE_URL": "https://ztnascout.vonbusch.app"
+  },
+
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "ztna-scout-db",
+      "database_id": "REPLACE_IN_DASHBOARD"
+    }
+  ]
 }
