--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,18 +5,10 @@
 
   "assets": {
     "directory": "dist",
-    "run_worker_first": true
+    "run_worker_first": false
   },
 
   "vars": {
     "PUBLIC_BASE_URL": "https://ztnascout.vonbusch.app"
-  },
-
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "ztna-scout-db",
-      "database_id": "REPLACE_IN_DASHBOARD"
-    }
-  ]
+  }
 }
