--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,17 @@ jobs:
         with:
           bun-version: latest
 
-      - run: bun install --frozen-lockfile
-      - run: bun run build
+      - name: Install
+        run: bun install --frozen-lockfile
 
-      - name: Deploy (Wrangler v4)
+      - name: Build
+        run: bun run build
+
+      - name: Deploy (use generated Wrangler config from build output)
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-        run: npx --yes wrangler@4 deploy --config wrangler.jsonc
+        run: |
+          CONFIG_PATH="$(ls -1 dist/*/wrangler.json | head -n 1)"
+          echo "Using config: ${CONFIG_PATH}"
+          npx --yes wrangler@4 deploy --config "${CONFIG_PATH}"
